--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="...">
+                    <img alt="Brand" src="http://bower.io/img/bower-logo.png">
                 </a>
             </div>
         </div>
